# medical_reports_summary

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  nha_client.py  nha_ps2_skeletal_notebook_main.ipynb  package.json  ps2_image_catalog.ipynb  ps2_image_catalog.ts  ps3_claim_summary.ts  pyproject.toml  vercel.json  verify_outputs.py
Claims/MC011A/BOCW_GJ_R3_2026040310046613_ER/: claim_summary.json  claim_summary.md  image_catalog.json  image_catalog.md
Claims/MC011A/GOV_GJ_R2_2025_2026040410000059/: claim_summary.json  claim_summary.md  image_catalog.json  image_catalog.md
Claims/MC011A/MAV_GJ_R3_2026040310038930_ER/: claim_summary.json  claim_summary.md  image_catalog.json  image_catalog.md
Claims/MC011A/PMJAY_DL_S_G_R2_2026040210052168/: claim_summary.json  claim_summary.md  image_catalog.json  image_catalog.md
Claims/MC011A/PMJAY_GJ_S_G_R3_2026033110058967_ER/: claim_summary.json  claim_summary.md  image_catalog.json  image_catalog.md
Claims/MC011A/PMJAY_GJ_S_G_R3_2026040410001743/: claim_summary.json  claim_summary.md  image_catalog.json  image_catalog.md
Claims/MC011A/PMJAY_MH_S_G_R1_2026032310059049/: claim_summary.json  claim_summary.md  image_catalog.json  image_catalog.md
Claims/MC011A/PMJAY_MH_S_G_R1_2026032610038286_P/: claim_summary.json  claim_summary.md  image_catalog.json  (+1 more)
Claims/SU007A/: SU007A_meta.json  SU007A_result.json
api/: generic-processor.ts  index.ts
outputs/: ps2_all_package_outputs.json
outputs/package_json_outputs/: MC011A_outputs.json  MG029A_outputs.json  SG039C_outputs.json  SU007A_outputs.json
(+128 files in other folders)
